add docker file and db config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/asn2
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://dpg-ci4nbdunqqlf6bpgnn1g-a.oregon-postgres.render.com:5432/asn2_d8iz
+spring.datasource.username=admin
+spring.datasource.password=eXlZcaRJSyqfcHGMvmK6NJke6MctDM7q
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
